example/fortune-teller-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fortune-teller
  namespace: web
  labels:
    app: fortune-teller
spec:
  replicas: 3 
  selector:
    matchLabels:
      app: fortune-teller
  template:
    metadata:
      labels:
        app: fortune-teller
    spec:
      containers:
      - name: fortune-teller
        image: spsarolkar/fortune-teller:2.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
        resources:
          limits:
             cpu: 500m
             memory: 700Mi
          requests:
             cpu: 100m
             memory: 300Mi
