example/fortune-teller-service.yml
apiVersion: v1
kind: Service
metadata:
  name: fortune-teller-service
  namespace: web
spec:
  ports:
     - name: http
       protocol: TCP
       port: 80
       targetPort: 8080
  selector:
      app: fortune-teller
