example/ingress-https-staging.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fortune-teller-ingress-stg
  namespace: web
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-stg"
    cert-manager.io/acme-challenge-type: http01
spec:
  tls:
  - hosts:
    - gcp-kube-demo-stg.sunilsarolkar.com
    secretName: fortune-teller-tls-stg
  - hosts:
    - fortune-stg.sunilsarolkar.com
    secretName: fortune-tls-stg
  rules:
  - host: gcp-kube-demo-stg.sunilsarolkar.com
    http:
      paths:
      - backend:
          serviceName: fortune-teller-service
          servicePort: 80
        path: /.*
  - host: fortune-stg.sunilsarolkar.com
    http:
      paths:
      - backend:
          serviceName: fortune-teller-service
          servicePort: 80
        path: /.*
