example/ingress-https.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fortune-teller-ingress
  namespace: web
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - gcp-kube-demo.sunilsarolkar.com
    secretName: fortune-teller-tls-prod
  backend:
    serviceName: fortune-teller-service
    servicePort: 80
